add the navigation bar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agriplus website</title>
 </head>
+
 <body>
-    
+    <div class="menu">
+        <p id="logo">AgriPlus</p>
+        <div class="navlinks">
+            <p>Home</p>
+            <p>About</p>
+            <p>Products</p>
+            <p>Contact Us</p>
+        </div>
+        <div class="login">
+            <p>Login</p>
+        </div>
+        <button id="button">Get Started</button>
+    </div>
+
 </body>
+
 </html>
