--- a/index.html
+++ b/index.html
@@ -24,6 +24,27 @@
         <button id="button">Get Started</button>
     </div>
 
+    <div class="about-agriplus">
+       
+        <div class="about-text">
+            <div class="about-img">
+                <img src="/images/image 2.png" alt="farm products">
+            </div>
+          <h1>
+            Buying and selling quality<br>
+            farmm produce has never <br>
+            been easier
+          </h1>
+
+          <p>AgriPlus is here to have sorted, you can order farm<br>
+            produce from the farmers, harvesters, and producers<br>
+            directly
+          </p>
+      </div>
+        <button id="button">Explore More</button>
+       
+    </div>
+
 </body>
 
 </html>
