--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
         </div>
     </div>
 
+
+
+
+
+
+
     <div class="exists">
         <div class="about-exists">
             <h2>Why we exist</h2>
@@ -59,6 +65,22 @@
             <img src="/images/image 3.png" alt="pure image">
         </div>
     </div>
+
+
+    <div class="category">
+        <h2>Our categories of products</h2>
+        <p>We go beyond the borders to ensure you get fresh produce<br>
+        from the farm. Our customers satisfaction is our mission.
+        </p>
+    </div>
+
+
+
+
+
+
+
+
 
 
 </body>
