add the most popular  section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="about-agriplus">
-        
+
         <div class="about-text">
 
             <h1>
@@ -70,13 +70,71 @@
     <div class="category">
         <h2>Our categories of products</h2>
         <p>We go beyond the borders to ensure you get fresh produce<br>
-        from the farm. Our customers satisfaction is our mission.
+            from the farm. Our customers satisfaction is our mission.
         </p>
     </div>
 
+    <div class="popular">
+        <h2>Most Popular</h2>
 
+        <div class="about-images">
+            <div class="image">
+                <img src="/images/image 5.png" alt="Fresh Carrots">
+                <h3>Fresh Carrots</h3>
+                <P>Kinyanjui farmers Association</P>
+                <p>Ksh. 200/kg</p>
+            </div>
+            <div class="image">
+                <img src="/images/image 4.png" alt="cereals">
+                <h3>Cereals</h3>
+                <p> Kenya Cereals Board</p>
+                <p>Ksh. 5000/bag</p>
+            </div>
+            <div class="image">
+                <img src="/images/image 5.png" alt="frsh fish">
+                <h3>Fresh Fish/Tilapia</h3>
+                <p>Mr Otieno</p>
+                <p>Ksh. 500/kg</p>
+            </div>
+            <div class="image">
+                <img src="/images/image 6.png" alt="sukuma wiki">
+                <h3>Kales/Sikuma</h3>
+                <p>Njoki's Farm</p>
+                <p>Ksh.50/bunch</p>
+            </div>
+        </div>
+    </div>
 
+    <div class="New-item">
+        <h2>Newest Item</h2>
 
+        <div class="about-images">
+            <div class="image">
+                <img src="/images/Rectangle 6.png" alt="Fresh Carrots">
+                <h3>Chicken</h3>
+                <P>Wafula farm</P>
+                <p>Ksh. 700</p>
+            </div>
+            <div class="image">
+                <img src="/images/Rectangle 7.png" alt="cereals">
+                <h3>Ahero/Ir Rice</h3>
+                <p> Ahero Irrigation Board</p>
+                <p>Ksh. 200/bag</p>
+            </div>
+            <div class="image">
+                <img src="/images/Rectangle 8.png" alt="frsh fish">
+                <h3>Mursik</h3>
+                <p>Korir Diary Farm</p>
+                <p>Ksh. 200/kg</p>
+            </div>
+            <div class="image">
+                <img src="/images/Rectangle 9.png" alt="sukuma wiki">
+                <h3>Fresh Tomatoes</h3>
+                <p>TZ Farmers Association</p>
+                <p>Ksh.5000/Crate</p>
+            </div>
+        </div>
+    </div>
 
 
 
