add the customers feedback about the company

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <h1>
                 Buying and selling quality<br>
-                farmm produce has never <br>
+                farm produce has never <br>
                 been easier
             </h1>
 
@@ -136,9 +136,23 @@
         </div>
     </div>
 
+    <div class="more">
+        <p>See All </p>
+        <i class="fa-regular fa-right-long"></i>
+    </div>
 
 
 
+    <div class="about-customers">
+        <h1>What our esteem customers has to say about us.</h1>
+    </div>
+        <div class="feedback">
+            <div class="customers">
+                <p>"The most<br>efficient way to<br>get fresh<br>produce"</p>
+                <img src="/images/Rectangle 11.png" alt="mkulima">Rebbeca Mkulima
+            </div>
+        </div>
+   
 
 
 </body>
