add the email subscription to our newsletter

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agriplus website</title>
 </head>
@@ -138,21 +139,60 @@
 
     <div class="more">
         <p>See All </p>
-        <i class="fa-regular fa-right-long"></i>
+
     </div>
-
-
 
     <div class="about-customers">
         <h1>What our esteem customers has to say about us.</h1>
     </div>
-        <div class="feedback">
-            <div class="customers">
-                <p>"The most<br>efficient way to<br>get fresh<br>produce"</p>
-                <img src="/images/Rectangle 11.png" alt="mkulima">Rebbeca Mkulima
+    <div class="feedback">
+        <div class="customers">
+            <div class="stars">
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+            </div>
+            <p>"The most<br>efficient way to<br>get fresh<br>produce"</p>
+            <img src="/images/Rectangle 11.png" alt="mkulima">Rebbeca Mkulima
+        </div>
+        <div class="customers">
+            <div class="stars">
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+            </div>
+            <p>"Connecting rural<br>to urban through<br>business" </p>
+            <div class="pics">
+                <img src="/images/Rectangle 11-2.png" alt="mkulima">
+                <p id="name">John doe</p>
             </div>
         </div>
-   
+
+        <div class="customers">
+            <div class="stars">
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+                <i class='bx bxs-star'></i>
+            </div>
+            <p>"Connecting rural<br>to urban through<br>business" </p>
+            <div class="pics">
+                <img src="/images/Rectangle 11-2.png" alt="mkulima">
+                <p id="name">Lavington dwellers</p>
+            </div>
+        </div>
+    </div>
+    
+
+    <div class="about-email">
+     <h2>We'd like to keep you in touch</h2>
+     <p>Sunscribe to our Newsletter</p>
+    </div>
 
 
 </body>
