add some changes made to the website

--- a/index.html
+++ b/index.html
@@ -39,15 +39,18 @@
                 produce from the farmers, harvesters, and producers<br>
                 directly
             </p>
-            <button id="button">Explore More</button>
+            <button id="btn">Explore More</button>
         </div>
         <div class="about-img">
             <img src="/images/image 2.png" alt="farm products">
         </div>
     </div>
 
-
-
+    <div class="vendors">
+            <p>200+<br>Verified Vendors</p>
+            <p>105+<br>Happy Customers</p>
+            <P>2000+<br>Nation Wide Customers</P>
+    </div>
 
 
 
@@ -187,11 +190,11 @@
             </div>
         </div>
     </div>
-    
+
 
     <div class="about-email">
-     <h2>We'd like to keep you in touch</h2>
-     <p>Sunscribe to our Newsletter</p>
+        <h2>We'd like to keep you in touch</h2>
+        <p>Subscribe to our newsletter</p>
     </div>
 
 
