--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </div>
 
     <div class="more">
-        <h3><span>See</span> All</h3><box-icon type='solid' name='right-arrow-alt'></box-icon>
+        <h3><span>See</span> All<span id="arrow">&#8594</span></h3>
 
     </div>
    <hr>
@@ -205,7 +205,7 @@
     </div>
 
     <div class="more">
-        <h3><span>Read</span> More</h3>
+        <h3><span>Read</span> More <span id="arrow">&#8594</span></h3>
     </div>
 
 <!-- Email subscription -->
@@ -259,7 +259,7 @@
                 <li>Privacy and policy</li>
             </ul>
         </div>
-            
+           
     </div>
    
 
