add last commit

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <button id="btn">Explore More</button>
         </div>
         <div class="about-img">
-            <img src="/images/image 2.png" alt="farm products">
+            <img src="./images/image 2.png" alt="farm products">
         </div>
     </div>
 
@@ -76,7 +76,7 @@
             </p>
         </div>
         <div class="its-image">
-            <img src="/images/image 3.png" alt="pure image">
+            <img src="./images/image 3.png" alt="pure image">
         </div>
     </div>
 
@@ -93,25 +93,25 @@
 
         <div class="about-images">
             <div class="image">
-                <img src="/images/Rectangle 5.png" alt="Fresh Carrots">
+                <img src="./images/Rectangle 5.png" alt="Fresh Carrots">
                 <h3>Fresh Carrots</h3>
                 <P>Kinyanjui farmers Association</P>
                 <p>Ksh. 200/kg</p>
             </div>
             <div class="image">
-                <img src="/images/image 4.png" alt="cereals">
+                <img src="./images/image 4.png" alt="cereals">
                 <h3>Cereals</h3>
                 <p> Kenya Cereals Board</p>
                 <p>Ksh. 5000/bag</p>
             </div>
             <div class="image">
-                <img src="/images/image 5.png" alt="frsh fish">
+                <img src="./images/image 5.png" alt="frsh fish">
                 <h3>Fresh Fish/Tilapia</h3>
                 <p>Mr Otieno</p>
                 <p>Ksh. 500/kg</p>
             </div>
             <div class="image">
-                <img src="/images/image 6.png" alt="sukuma wiki">
+                <img src="./images/image 6.png" alt="sukuma wiki">
                 <h3>Kales/Sikuma</h3>
                 <p>Njoki's Farm</p>
                 <p>Ksh.50/bunch</p>
@@ -124,25 +124,25 @@
 
         <div class="about-images">
             <div class="image">
-                <img src="/images/Rectangle 6.png" alt="Fresh Carrots">
+                <img src="./images/Rectangle 6.png" alt="Fresh Carrots">
                 <h3>Chicken</h3>
                 <P>Wafula farm</P>
                 <p>Ksh. 700</p>
             </div>
             <div class="image">
-                <img src="/images/Rectangle 7.png" alt="cereals">
+                <img src="./images/Rectangle 7.png" alt="cereals">
                 <h3>Ahero/Ir Rice</h3>
                 <p> Ahero Irrigation Board</p>
                 <p>Ksh. 200/bag</p>
             </div>
             <div class="image">
-                <img src="/images/Rectangle 8.png" alt="frsh fish">
+                <img src="./images/Rectangle 8.png" alt="frsh fish">
                 <h3>Mursik</h3>
                 <p>Korir Diary Farm</p>
                 <p>Ksh. 200/kg</p>
             </div>
             <div class="image">
-                <img src="/images/Rectangle 9.png" alt="sukuma wiki">
+                <img src="./images/Rectangle 9.png" alt="sukuma wiki">
                 <h3>Fresh Tomatoes</h3>
                 <p>TZ Farmers Association</p>
                 <p>Ksh.5000/Crate</p>
@@ -169,7 +169,7 @@
             </div>
             <p>"The most<br>efficient way to<br>get fresh<br>produce"</p>
             <div class="pics">
-                <img src="/images/Rectangle 11.png" alt="mkulima">
+                <img src="./images/Rectangle 11.png" alt="mkulima">
                 <p id="name">Rebbeca Mkulima</p>
             </div>
         </div>
@@ -183,7 +183,7 @@
             </div>
             <p>"Connecting rural<br>to urban through<br>business" </p>
             <div class="pics">
-                <img src="/images/Rectangle 11-1.png" alt="mkulima">
+                <img src="./images/Rectangle 11-1.png" alt="mkulima">
                 <p id="name">John doe</p>
             </div>
         </div>
@@ -198,7 +198,7 @@
             </div>
             <p>"Connecting rural<br>to urban through<br>business" </p>
             <div class="pics">
-                <img src="/images/Rectangle 11-2.png" alt="mkulima">
+                <img src="./images/Rectangle 11-2.png" alt="mkulima">
                 <p id="name">Lavington dwellers</p>
             </div>
         </div>
